@@ -1,5 +1,5 @@
-petcapRemover
-=============
+pet-uncapper
+============
 
 .. dfhack-tool::
     :summary: Modify the pet population cap.
@@ -16,18 +16,20 @@ cap. It can still go over, but only in the case of multiple births.
 Usage
 -----
 
-``enable petcapRemover``
+``enable pet-uncapper``
     Enables the plugin and starts running with default settings.
-``petcapRemover cap <value>``
+``pet-uncapper [status]``
+    Print out current settings.
+``pet-uncapper now``
+    Impregnate adult female pets that have access to a compatible male, up to
+    the population cap.
+``pet-uncapper cap <value>``
     Set the new population cap per species to the specified value. If set to 0,
     then there is no cap (good luck with all those animals!). The default cap
     is 100.
-``petcapRemover``
-    Impregnate female pets that have access to a compatible male, up to the
-    population cap.
-``petcapRemover every <ticks>``
+``pet-uncapper every <ticks>``
     Set how often the plugin will cause pregnancies. The default frequency is
     every 10,000 ticks (a little over 8 game days).
-``petcapRemover pregtime <ticks>``
+``pet-uncapper pregtime <ticks>``
     Sets the pregnancy duration to the specified number of ticks. The default
     value is 200,000 ticks, which is the natural pet pregnancy duration.
