@@ -139,7 +139,7 @@ if(BUILD_SUPPORTED)
     dfhack_plugin(orders orders.cpp LINK_LIBRARIES jsoncpp_static lua)
     dfhack_plugin(overlay overlay.cpp LINK_LIBRARIES lua)
     dfhack_plugin(pathable pathable.cpp LINK_LIBRARIES lua)
-    #dfhack_plugin(petcapRemover petcapRemover.cpp)
+    dfhack_plugin(pet-uncapper pet-uncapper.cpp)
     #dfhack_plugin(plants plants.cpp)
     dfhack_plugin(preserve-tombs preserve-tombs.cpp)
     dfhack_plugin(probe probe.cpp LINK_LIBRARIES lua)
